# Huffify

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: CI.yaml  deploy.yml  test-lint.yml
src/: main.py  test.py
src/huffify/: __init__.py  abstract.py  annotations.py  encoders.py  fileManger.py  heapNodes.py  huffify.py
src/huffify/core/: encoders.py  huffify.py
src/huffify/presentation/: cli.py
tests/: test.py  test_pum.py
tests/test_encoders/: test_adaptive_encoder.py  test_bitstream_encoder.py  test_mvp_encoder.py  test_rle_huffman_encoder.py
tests/test_huffify_core/: test_huffify.py
